--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <h2>I am a Web Developer</h2>
     <hr/>
     <h2><a href="public/index_meme_project.html">Motivation Meme Project</a></h2>
-    <img src="./assets/images/motivation_meme.png" height="200" alt="motivation picture"/>
+    <img src="assets/images/motivation_meme.png" height="200" alt="motivation picture"/>
     <h2> <a href= "public/index_birthday_invite.html">Birthday Invite Project</a></h2>
-    <img src="./assets/images/birthday-invite.png" height="200" alt="invite project card"/>
+    <img src="assets/images/birthday-invite.png" height="200" alt="invite project card"/>
     <hr/>
     <a href="./public/about.html">About Me</a>
     <a href="./public/contact.html">Contact Me</a>
